--- a/src/main/resources/templates/admin/layout/header.html
+++ b/src/main/resources/templates/admin/layout/header.html
@@ -61,8 +61,7 @@
           class="dropdown-menu dropdown-menu-end"
           aria-labelledby="navbarDropdown"
         >
-          <li><a class="dropdown-item" href="#!">Settings</a></li>
-          <li><a class="dropdown-item" href="#!">Activity Log</a></li>
+          <li><a class="dropdown-item" href="/">Trang chủ</a></li>
           <li><hr class="dropdown-divider" /></li>
           <li>
             <form id="logoutForm" th:action="@{/logout}" method="post">
