--- a/src/main/resources/templates/client/chatbot/practice.html
+++ b/src/main/resources/templates/client/chatbot/practice.html
@@ -124,6 +124,7 @@
                       required
                       placeholder="Nhập bản dịch tiếng Anh của bạn tại đây..."
                       style="font-size: 1.7rem; line-height: 1.6 !important"
+                      th:text="${studentEn}"
                     ></textarea>
                   </div>
 
