--- a/src/main/resources/templates/admin/dashboard/show.html
+++ b/src/main/resources/templates/admin/dashboard/show.html
@@ -177,7 +177,7 @@
                     <a
                       class="small text-white stretched-link"
                       target="_blank"
-                      href="http://localhost:3000/auditlogs"
+                      href="https://react-exam-cnpm.vercel.app/auditlogs"
                       >View Activity Log</a
                     >
                     <div class="small text-white">
