--- a/src/main/resources/templates/client/layout/header.html
+++ b/src/main/resources/templates/client/layout/header.html
@@ -71,7 +71,7 @@
                         <li>
                           <a
                             class="dropdown-item"
-                            th:href="'http://localhost:3000/profile/' + ${session.id}"
+                            th:href="'https://react-exam-cnpm.vercel.app/profile/' + ${session.id}"
                             target="_blank"
                             style="
                               width: 100%;
