--- a/src/main/resources/templates/client/thank/thank.html
+++ b/src/main/resources/templates/client/thank/thank.html
@@ -86,7 +86,7 @@
               class="btn btn-lg btn-primary mt-3"
               >Khóa học vừa mua</a
             >
-            <a href="/my-courses" class="btn btn-lg btn-success mt-3 ms-2"
+            <a href="/purchased-course" class="btn btn-lg btn-success mt-3 ms-2"
               >Xem các khóa học đã mua</a
             >
           </div>
