--- a/src/main/resources/templates/client/exam/confirmexam.html
+++ b/src/main/resources/templates/client/exam/confirmexam.html
@@ -108,7 +108,7 @@
               <a class="btn btn-secondary" href="/exam">Hủy</a>
               <a
                 class="btn btn-secondary"
-                th:href="'http://localhost:3000/score/' + ${examSession.id}"
+                th:href="'https://react-exam-cnpm.vercel.app/score/' + ${examSession.id}"
                 target="_blank"
                 >Điểm kì thi</a
               >
