--- a/src/main/resources/templates/admin/layout/sidebar.html
+++ b/src/main/resources/templates/admin/layout/sidebar.html
@@ -68,7 +68,7 @@
             <a
               class="nav-link"
               target="_blank"
-              href="https://react-exam-cnpm.vercel.app/auditlogs"
+              href="http://localhost:3000/auditlogs"
             >
               <div class="sb-nav-link-icon">
                 <i class="fas fa-tachometer-alt"></i>
