--- a/src/main/resources/templates/admin/test/detail.html
+++ b/src/main/resources/templates/admin/test/detail.html
@@ -45,7 +45,7 @@
               </a>
 
               <a
-                th:href="'https://react-exam-cnpm.vercel.app/score/' + ${id}"
+                th:href="'http://localhost:3000/score/' + ${id}"
                 class="btn btn-primary"
                 target="_blank"
                 download
