--- a/src/main/resources/templates/admin/coursesold/show.html
+++ b/src/main/resources/templates/admin/coursesold/show.html
@@ -31,6 +31,17 @@
             <ol class="breadcrumb mb-4">
               <li class="breadcrumb-item active">Danh sách khóa học đã bán</li>
             </ol>
+            <ol class="breadcrumb mb-4">
+              <li class="breadcrumb-item">
+                <a
+                  href="http://localhost:3000/soldcourses"
+                  class="btn btn-success"
+                  target="_blank"
+                >
+                  Thống kê
+                </a>
+              </li>
+            </ol>
 
             <div class="mt-5">
               <div class="row">
