--- a/src/main/resources/templates/admin/class/addStudent.html
+++ b/src/main/resources/templates/admin/class/addStudent.html
@@ -116,7 +116,8 @@
                         <a
                           class="page-link"
                           th:classappend="${currentPage == 1} ? ' disabled'"
-                          th:href="@{'/admin/class/student/add/{id}(id=${currentClass.id})/?page=' + ${currentPage - 1}}"
+                          th:href="@{'/admin/class/student/add/{id}(id=${currentClass.id}, page=${currentPage - 1})}
+"
                           aria-label="Previous"
                         >
                           <span aria-hidden="true">&laquo;</span>
@@ -129,7 +130,7 @@
                         <a
                           class="page-link"
                           th:classappend="${i == currentPage} ? ' active'"
-                          th:href="@{'/admin/class/student/add/{id}(id=${currentClass.id})/?page=' + ${i}}"
+                          th:href="@{/admin/class/student/add/{id}(id=${currentClass.id}, page=${i})}"
                           th:text="${i}"
                           >1</a
                         >
@@ -138,7 +139,8 @@
                         <a
                           class="page-link"
                           th:classappend="${currentPage == totalPages} ? ' disabled'"
-                          th:href="@{'/admin/class/student/add/{id}(id=${currentClass.id})/?page=' + ${currentPage + 1}}"
+                          th:href="@{/admin/class/student/add/{id}(id=${currentClass.id}, page=${currentPage + 1})}
+"
                           aria-label="Next"
                         >
                           <span aria-hidden="true">&raquo;</span>
