--- a/src/main/resources/templates/admin/test/detail.html
+++ b/src/main/resources/templates/admin/test/detail.html
@@ -94,11 +94,12 @@
                   <nav aria-label="Page navigation">
                     <ul class="pagination justify-content-center">
                       <!-- Nút Previous -->
+                      <!-- Nút Previous -->
                       <li class="page-item">
                         <a
                           class="page-link"
                           th:classappend="${currentPage == 1} ? ' disabled'"
-                          th:href="@{/admin/test/{id}(id=${examSessionId}) + '?page=' + (${currentPage - 1})}"
+                          th:href="@{/admin/test/{id}(id=${id}, page=${currentPage - 1})}"
                           aria-label="Previous"
                         >
                           <span aria-hidden="true">&laquo;</span>
@@ -113,7 +114,7 @@
                         <a
                           class="page-link"
                           th:classappend="${i == currentPage} ? ' active'"
-                          th:href="@{/admin/test/{id}(id=${examSessionId}) + '?page=' + ${i}}"
+                          th:href="@{/admin/test/{id}(id=${id}, page=${i})}"
                           th:text="${i}"
                         ></a>
                       </li>
@@ -123,7 +124,7 @@
                         <a
                           class="page-link"
                           th:classappend="${currentPage == totalPages} ? ' disabled'"
-                          th:href="@{/admin/test/{id}(id=${examSessionId}) + '?page=' + (${currentPage + 1})}"
+                          th:href="@{/admin/test/{id}(id=${id}, page=${currentPage + 1})}"
                           aria-label="Next"
                         >
                           <span aria-hidden="true">&raquo;</span>
