--- a/src/main/resources/templates/admin/user/show.html
+++ b/src/main/resources/templates/admin/user/show.html
@@ -61,12 +61,15 @@
                         <td th:text="${user.email}">user@example.com</td>
                         <td th:text="${user.fullName}">Nguyễn Văn A</td>
                         <td>
-                          <span
-                            th:each="r : ${user.roles}"
-                            th:text="${r.name}"
-                            class="badge bg-info mx-1"
-                          ></span>
+                          <span th:each="r : ${user.roles}">
+                            <span
+                              th:text="${r.name}"
+                              class="badge bg-info"
+                            ></span
+                            ><br />
+                          </span>
                         </td>
+
                         <td>
                           <a
                             th:href="@{'/admin/user/' + ${user.id}}"
